REG-82 fix overflowing bar charts and style errors (#8)

--- a/src/encoded/static/scss/encoded/modules/_regulome_search.scss
+++ b/src/encoded/static/scss/encoded/modules/_regulome_search.scss
@@ -131,8 +131,13 @@ body {
         .example-input {
             color: $regulomeGreen;
             text-decoration: underline;
+            padding: 0;
+            margin: 0 4px;
+            border: 0;
+            background: none;
             &:hover {
                 cursor: pointer;
+                font-weight: 600;
             }
         }
     }
@@ -256,6 +261,7 @@ dl.key-value {
         }
         h4 {
             font-size: 1.2rem;
+            line-height: normal;
             font-weight: normal;
             text-transform: uppercase;
             padding-top: 10px;
