--- a/src/encoded/static/scss/encoded/modules/_facet.scss
+++ b/src/encoded/static/scss/encoded/modules/_facet.scss
@@ -479,6 +479,10 @@ div.meta-status {
     }
 }
 
+.facetassay_term_name {
+    border-bottom: 0;
+}
+
 .fade-out-pull-right {
     width: 100%;
     background-image: linear-gradient(to bottom, transparent, #F2F2F2);
